[package]
name = "wrs-nwg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nwg = { version = "1", package = "native-windows-gui" }
nwd = { version = "1", package = "native-windows-derive" }
chrono = "0.4"
rusqlite = { version = "0.25", features = ["chrono", "bundled"] }
calamine = "0.18"
